Added PopupAdds For Writers, Genres and languages +  design for showing books and books details page

--- a/BookOnShelfBlazor/Components/Layout/NavMenu.razor.css
+++ b/BookOnShelfBlazor/Components/Layout/NavMenu.razor.css
@@ -36,25 +36,12 @@ main {
     flex-direction: column;
     align-items: center;
     text-decoration: none;
-    transition: 0.3s ease-in-out;
+    transition: transform 0.5s ease; /* Add transition for smooth animation */
 }
-.nav-link:hover {
-    animation: jumpOut 0.5s ease forwards;
-}
-
-@keyframes jumpOut {
-    0% {
-        transform: scale(1);
+    .nav-link:hover {
+        transform: scale(1.1); 
     }
 
-    50% {
-        transform: scale(1.1);
-    }
-
-    100% {
-        transform: scale(1.05);
-    }
-}
 .nav-item span {
     font-size: 16px;
 }
