--- a/BookOnShelfBlazor/wwwroot/app.css
+++ b/BookOnShelfBlazor/wwwroot/app.css
@@ -1,3 +1,4 @@
+@import url('app.css');
 html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
@@ -65,6 +66,7 @@ h1:focus {
 
 .card-body {
     padding: 1rem 0.5rem;
+    border: 1px solid #ccc;
 }
 
 
@@ -87,4 +89,139 @@ h1:focus {
 
     .link-color:hover{
         color:black;
+    }
+
+.card {
+    position: relative;
+}
+
+.card-image-container {
+    height: 225px;
+    padding: 4px; /* Padding for normal state */
+    border: 1px solid #ccc;
+    position: relative;
+    overflow: hidden;
+}
+
+    .card-image-container img {
+        transition: opacity 0.5s ease;
+        width: 100%;
+        height: 100%;
+    }
+
+        .card-image-container img.front-cover {
+            opacity: 1;
+        }
+
+        .card-image-container img.back-cover {
+            position: absolute;
+            top: 0;
+            left: 0;
+            opacity: 0;
+        }
+
+.card:hover .card-image-container img.front-cover {
+    opacity: 0;
+}
+
+.card:hover .card-image-container img.back-cover {
+    opacity: 1;
+}
+
+.image-container {
+    display: inline-block;
+    border: 1px solid #ccc;
+    padding: 10px;
+}
+
+    .image-container img {
+        display: block;
+        max-width: 100%;
+        height: auto;
+    }
+
+.toggle-picture-button {
+    padding: 0.5rem;
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+    display: block;
+    margin: 0 auto;
+    width: 50px;
+    transition: transform 0.5s ease; 
+    position: relative;
+}
+
+    .toggle-picture-button:hover {
+        transform: scale(1.1); 
+    }
+
+.front-cover,
+.back-cover {
+    width: 200px;
+    height: 300px;
+}
+
+.vr {
+    height: 180%;
+}
+
+.description-container {
+    max-height: 200%;
+}
+
+.description {
+    position: relative;
+    top: -175px;
+    margin-left: 15px;
+}
+
+.col-md-2 {
+    position: relative;
+}
+
+
+    .col-md-2 .vr {
+        margin-left: -10px;
+    }
+
+    .col-md-2 p {
+        position: absolute;
+        top: 0;
+    }
+
+    .col-md-2 hr {
+        position: absolute;
+        top: 37px;
+        width: 132px;
+    }
+
+    .col-md-2 p:nth-child(2) {
+        top: 60px;
+    }
+
+    .col-md-2 p:nth-child(3) {
+        top: 120px;
+    }
+
+    .col-md-2 hr:nth-child(4) {
+        top: 100px;
+    }
+
+    .col-md-2 hr:nth-child(5) {
+        top: 160px;
+    }
+
+.jump-animation {
+    transition: transform 0.5s ease;
+}
+
+    .jump-animation:hover {
+        transform: scale(1.1); !important;
+    }
+
+    .close-icon-size{
+        font-size: 25px;
     }
