--- a/BookOnShelfBlazor/Components/Pages/AddGenrePopUp.razor
+++ b/BookOnShelfBlazor/Components/Pages/AddGenrePopUp.razor
@@ -55,8 +55,8 @@
                     </div>
                 </div>
             </div>
-            <br />
-            <button type="submit" class="btn btn-primary">Add Writer</button>
+            <hr />
+            <button type="submit" class="btn btn-primary">Add Genre</button>
         </div>
     </div>
 </EditForm>
