--- a/BookOnShelfBlazor/Components/Pages/AddLanguagePopUp.razor
+++ b/BookOnShelfBlazor/Components/Pages/AddLanguagePopUp.razor
@@ -58,8 +58,8 @@
                     </div>
                 </div>
             </div>
-            <br />
-            <button type="submit" class="btn btn-primary">Add Writer</button>
+            <hr />
+            <button type="submit" class="btn btn-primary">Add Language</button>
         </div>
     </div>
 </EditForm>
